--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
                     <div class="dept-card">
                         <div class="card-side1">
-                            <img src="IMAGES/CAREERS/SVG/Documentation.svg" alt="documentation">
+                            <img src="IMAGES/CAREERS/SVG/Documentation v2.svg" alt="documentation">
                         </div>
                         <div class="card-side2">
                             <p>DOCUMENTATION<br><br></p>
