--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     </div>
 
 
-    
+    <script src="JS/refresh.js"></script>
     <script src="JS/mobnav.js"></script>
     <script src="JS/smoothscroll.js"></script>
     <script src="JS/imageslide.js"></script>
