--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <img src="IMAGES/CAREERS/SVG/Brakes.svg" alt="brake">
                         </div>
                         <div class="card-side2">
-                            <p>BRAKE SYSTEMS<br><br></p>
+                            <p>BRAKE SYSTEM<br><br></p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
                         </div>
                     </div>
@@ -441,4 +441,5 @@
     <script src="JS/navcolorchange.js"></script>
     <script src="JS/logo.js"></script>
 </body>
+
 </html>
