--- a/index.html
+++ b/index.html
@@ -337,85 +337,85 @@
             <div class="sponsor-box">
 
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/GOLD/Gowri Shankar.png" alt="sponsor-1"></a>
+                    <a href="#" onclick="return false"> <img src="IMAGES/SPONSORS/GOLD/Gowri Shankar.png" alt="sponsor-1"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/GOLD/Juno.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/GOLD/Juno.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/SILVER/garett.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/garett.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/SILVER/Igus.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/SILVER/Igus.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/amitronics.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/amitronics.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/aplica.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/aplica.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/cadd centre.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/cadd centre.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/Decofix_Logo.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/Decofix_Logo.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/henkel logo.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/henkel logo.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/Jain spices.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/Jain spices.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/Lion circuits.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/Lion circuits.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/PROTECK.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/PROTECK.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/D_BRONZE/Surya hydraulics.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/D_BRONZE/Surya hydraulics.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/adler-fire-logo.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/adler-fire-logo.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/AnilLogo.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/AnilLogo.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/banna-spray-paints.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/banna-spray-paints.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/bharat rubber.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/bharat rubber.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/Bharat_Petroleum_Logo.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/Bharat_Petroleum_Logo.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/eastern rubber.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/eastern rubber.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/hanu heat treaters.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/hanu heat treaters.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/knorr-brense + parekh agencies.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/knorr-brense + parekh agencies.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/manjunath metal finishers.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/manjunath metal finishers.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/mipox abrasives.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/mipox abrasives.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/Smaaash.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/Smaaash.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/smartlink.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/smartlink.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/vaman plastics.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/vaman plastics.png" alt="sponsor-2"></a>
                 </div>
                 <div class="sponsor-1">
-                    <a href="#"><img src="IMAGES/SPONSORS/BRONZE/VeeNee powder coating.png" alt="sponsor-2"></a>
+                    <a href="#" onclick="return false"><img src="IMAGES/SPONSORS/BRONZE/VeeNee powder coating.png" alt="sponsor-2"></a>
                 </div>
               
             </div>
@@ -459,7 +459,10 @@
     </div>
 
 
-    <!--script src="JS/refresh.js"></script-->
+
+
+
+    <script src="JS/refresh.js"></script>
     <script src="JS/mobnav.js"></script>
     <script src="JS/smoothscroll.js"></script>
     <script src="JS/imageslide.js"></script>
