--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                         <h5>Team Capt</h5>
                         <p>Innovator! Thats what people call him.</p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/head.hoonigan/"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/pranay-ketineni-839329171/?originalSubdomain=in"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.instagram.com/head.hoonigan/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
+                            <a href="https://www.linkedin.com/in/pranay-ketineni-839329171/?originalSubdomain=in" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
                         </div>                        
                        
                     </div>
@@ -168,8 +168,8 @@
                         <h5>Team Manager</h5>
                         <p>Managing team since 2015. Ask me anything!</p> 
                         <div class="team-social">
-                            <a href="#"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="#"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="#" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
+                            <a href="#" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
                         </div>         
                     </div>
                     
@@ -185,8 +185,8 @@
                         <h5>Composites Lead</h5>
                         <p>It all began with a thought.</p> 
                         <div class="team-social">
-                            <a href="https://www.instagram.com/olle_huduga_niranjan/"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/?originalSubdomain=in"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.instagram.com/olle_huduga_niranjan/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
+                            <a href="https://www.linkedin.com/in/niranjan-bharadwaj-2339021a5/?originalSubdomain=in" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
                         </div>   
                     </div>
                 </div>
