--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     </div>
                     <div class="card-side2">
                         <h3>Pranay Ketineni</h3>
-                        <h5>Team Capt</h5>
+                        <h5>Team Captain</h5>
                         <p>Innovator! Thats what people call him.</p> 
                         <div class="team-social">
                             <a href="https://www.instagram.com/head.hoonigan/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
@@ -238,7 +238,7 @@
                         <p>Making engineering awesome!</p> 
                         <div class="team-social">
                             <a href="https://www.instagram.com/psychshetty/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
-                            <a href="https://www.linkedin.com/in/hemanthshetty439/" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
+                            <a href="https://www.linkedin.com/in/hemanthmshetty439" target="_blank"><img src="IMAGES/SOCIAL/li.png" alt="li"></a>
                         </div>   
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                     </div>
                     <div class="card-side2">
                         <h3>Niranjan Bharadwaj</h3>
-                        <h5>Vice capt</h5>
+                        <h5>Vice Captain</h5>
                         <p>It all began with a thought.</p> 
                         <div class="team-social">
                             <a href="https://www.instagram.com/olle_huduga_niranjan/" target="_blank"><img src="IMAGES/SOCIAL/ig.png" alt="ig"></a>
