--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
                             <img src="IMAGES/CAREERS/SVG/B Plan.svg" alt="business-plan">
                         </div>
                         <div class="card-side2">
-                            <p>BUSINESS PLAN<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>BUSINESS PLAN<br></p>
+                            <p1 class="paragraph">Make a business strategy for the car and its production to maximize our profits. Static event which requires high understanding of finances and marketing.</p1>
                         </div>
                     </div>
                     
@@ -304,8 +304,8 @@
                             <img src="IMAGES/CAREERS/SVG/Sposorship.svg" alt="sponsorship">
                         </div>
                         <div class="card-side2">
-                            <p>SPONSORSHIP<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>SPONSORSHIP<br></p>
+                            <p1 class="paragraph">The department that raises funds for each project, allocates space on the car to sponsoring brands and manages monetary funds. </p1>
                         </div>
                     </div>
                     
@@ -314,8 +314,8 @@
                             <img src="IMAGES/CAREERS/SVG/Photography.svg" alt="photography">
                         </div>
                         <div class="card-side2">
-                            <p>PHOTOGRAPHY & MEDIA<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>PHOTOGRAPHY & MEDIA<br></p>
+                            <p1 class="paragraph">Be the eyes of the team. Cover the team's journey and create content for documentation and online publicity.</p1>
                         </div>
                     </div>
 
@@ -324,8 +324,8 @@
                             <img src="IMAGES/CAREERS/SVG/Social Media.svg" alt="social-media">
                         </div>
                         <div class="card-side2">
-                            <p>SOCIAL MEDIA<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>SOCIAL MEDIA<br></p>
+                            <p1 class="paragraph">Manage our social media pages to show the world what Velocita Racing is. Requires good understanding of social media platforms and how to get a good reach.</p1>
                         </div>
                     </div>
 
@@ -334,8 +334,8 @@
                             <img src="IMAGES/CAREERS/SVG/Documentation v2.svg" alt="documentation">
                         </div>
                         <div class="card-side2">
-                            <p>DOCUMENTATION<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>DOCUMENTATION<br></p>
+                            <p1 class="paragraph"> Write, manage and compose the documents of all departments, from technical to finances. Requires precise writing and organisational skills.</p1>
                         </div>
                     </div>
 
@@ -344,8 +344,8 @@
                             <img src="IMAGES/CAREERS/SVG/Aero wing.svg" alt="aero">
                         </div>
                         <div class="card-side2">
-                            <p>AERODYNAMICS<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>AERODYNAMICS<br></p>
+                            <p1 class="paragraph">Department to analyze and design aerodynamic devices to make the downforce required for a quick car. Wings, spoilers, diffusers and more.</p1>
                         </div>
                     </div>
 
@@ -354,8 +354,8 @@
                             <img src="IMAGES/CAREERS/SVG/Brakes.svg" alt="brake">
                         </div>
                         <div class="card-side2">
-                            <p>BRAKE SYSTEM<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>BRAKE SYSTEM<br></p>
+                            <p1 class="paragraph">Designs and manufactures a high performance brake system with low weight and high efficiency. </p1>
                         </div>
                     </div>
 
@@ -364,8 +364,8 @@
                             <img src="IMAGES/CAREERS/SVG/Chassis 2.svg" alt="chassis">
                         </div>
                         <div class="card-side2">
-                            <p>CHASSIS<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>CHASSIS<br></p>
+                            <p1 class="paragraph">The unit that ties all the sub-systems of a car together. The design needs understanding of structures, car balance and mechanical grip. </p1>
                         </div>
                     </div>
 
@@ -374,8 +374,8 @@
                             <img src="IMAGES/CAREERS/SVG/Electrical.svg" alt="electrical">
                         </div>
                         <div class="card-side2">
-                            <p>ELECTRICAL<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>ELECTRICAL<br></p>
+                            <p1 class="paragraph">The nervous system of the car. Design and manufacture the most minimal and robust electrical system according to regulations.</p1>
                         </div>
                     </div>
 
@@ -384,8 +384,8 @@
                             <img src="IMAGES/CAREERS/SVG/PT turbo.svg" alt="powertrain">
                         </div>
                         <div class="card-side2">
-                            <p>POWERTRAIN<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>POWERTRAIN<br></p>
+                            <p1 class="paragraph">Design and work on a power producing device, the engine. Getting the most power and efficiently putting it to the ground with minimal loss.</p1>
                         </div>
                     </div>
 
@@ -394,8 +394,8 @@
                             <img src="IMAGES/CAREERS/SVG/Steering.svg" alt="steering">
                         </div>
                         <div class="card-side2">
-                            <p>STEERING<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>STEERING<br></p>
+                            <p1 class="paragraph">Department to make the steering system and most of the driver controls. Requires mechanical understanding and ergonomic knowledge.</p1>
                         </div>
                     </div>
 
@@ -404,8 +404,8 @@
                             <img src="IMAGES/CAREERS/SVG/Suspension.svg" alt="suspension">
                         </div>
                         <div class="card-side2">
-                            <p>SUSPENSION<br><br></p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, corrupti?
+                            <p>SUSPENSION<br></p>
+                            <p1 class="paragraph"> The department that controls how the car behaves. Most complicated sub system yet the one with highest satisfaction once you hit the optimum grip.</p1>
                         </div>
                     </div>
 
