--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         <ul class="nav-links">
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#cars">CARS</a></li>
-            <li><a href="#team">OUR TEAM</a></li>
+            <li><a href="#team">TEAM</a></li>
             <li><a href="#careers">CAREERS</a></li>
             <li><a href="#sponsors">SPONSORS</a></li>
             <li><a href="#shop">SHOP</a></li>
+            <li><a href="./blog.html">BLOG</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
         <div class="burger">
@@ -607,5 +608,6 @@
     <script src="JS/imageslide.js"></script>
     <script src="JS/navcolorchange.js"></script>
     <script src="JS/logo.js"></script>
+    <script src="JS/n.js"></script>
 </body>
 </html>
