--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/blog.css">
+    <title>BLOG</title>
 </head>
 <body>
-    <p>Welcome to velocita racing!</p>
+    <div id="blog">
+        <p>We will be live soon!</p>
+        <a href="./index.html"><button>Back to Home</button></a>
+    </div>
 </body>
 </html>
