--- a/blog.html
+++ b/blog.html
@@ -2,14 +2,85 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="CSS/blog.css">
     <title>BLOG</title>
 </head>
 <body>
-    <div id="blog">
+    <!-- <div id="blog">
         <p>We will be live soon!</p>
-        <a href="./index.html"><button>Back to Home</button></a>
+        <a href="/velocitaracing.github.io/"><button>Back to Home</button></a>
+    </div> -->
+
+    <div class='intro'>
+        <div class="one">
+            <img class="panther" src="./IMAGES/panther.jpg" alt="">
+        </div>
+        <div class="two">
+            <p>Coming alive soon!</p>
+            <form  action="/velocitaracing.github.io/">
+                <input class="button" type="submit" value="Take me back" />
+            </form>
+            <!-- <img class="title" src="./IMAGES/The World of fine Engineering.png" alt=""> -->
+        </div>
+        
     </div>
+
+<!--     
+    <div class="VRF-1">
+        <div class="info-sec">
+            <h1>hello</h1>
+        </div>
+        <div class='itm-sec'>
+            <img src="./IMAGES/CARS/VRF-2.png" alt="">
+        </div>
+    </div>
+
+    <div class="VRF-2">
+        <div class='itm'>
+            <img src="./IMAGES/CARS/VRF-2.png" alt="">
+        </div>
+        <div class="info">
+            <h1>hello</h1>
+        </div>
+    </div>
+
+    <div class="VR">
+
+        <div class="VR-1">
+            <div class='VR-itm-sec'>
+                <img src="./IMAGES/CARS/VRF-2.png" alt="">
+            </div>
+            <div class="VR-info-sec">
+                <h1>hello</h1>
+            </div>  
+        </div>
+
+        <div class="VR-2">
+            <div class='VR-itm-sec'>
+                <img src="./IMAGES/CARS/VRF-2.png" alt="">
+            </div>
+            <div class="VR-info-sec">
+                <h1>hello</h1>
+            </div>  
+        </div>
+
+    </div>
+
+
+    <div class='ant-itm'>
+        <h1>You know you want to</h1>
+    </div> -->
+
+   
+        <div class="blog-footer">
+            <p>COPYRIGHT &COPY; 2020 &nbsp;|&nbsp; VELOCITA RACING &nbsp;|&nbsp; ALL RIGHTS RESERVED
+            </p>
+        </div>
+
+<script src="JS/blog.js"></script>
+<script src="JS/slide.js"></script>
+
 </body>
 </html>
