--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
         </div>
         <div class="two">
             <p>Coming alive soon!</p>
-            <form  action="/velocitaracing.github.io/">
+            <form  action="https://velocitaracing.github.io">
                 <input class="button" type="submit" value="Take me back" />
             </form>
             <!-- <img class="title" src="./IMAGES/The World of fine Engineering.png" alt=""> -->
