--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                                         <p>All independent Push-rod suspension</p>
                                     </div>
                                     <div class="info">
-                                        <img src="./IMAGES/tyre.svg" alt="">
+                                        <img id="extra" src="./IMAGES/tyre.svg" alt="">
                                         <p>O.Z Racing Wheels</p>
                                     </div>
                                     <div class="info">
