--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/trofee.jpg" alt="">
-                                        <p>13th Overall in FB2020</p>
+                                        <p id="extra">13th Overall in FB2020</p>
                                     </div>
                                     <!-- <button>VIEW PAST</button> -->
                                 </div>
@@ -336,8 +336,8 @@
                                         <p>All independent Push-rod suspension</p>
                                     </div>
                                     <div class="info">
-                                        <img id="extra" src="./IMAGES/tyre.svg" alt="">
-                                        <p>O.Z Racing Wheels</p>
+                                        <img  src="./IMAGES/tyre.svg" alt="">
+                                        <p id="extra">O.Z Racing Wheels</p>
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/brake.svg" alt="">
