--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
             <img class="panther" src="./IMAGES/panther.jpg" alt="">
         </div>
         <div class="two">
-            <p>Coming alive soon!</p>
+            <p>I'm on my way! </p>
             <form  action="https://velocitaracing.github.io">
                 <input class="button" type="submit" value="Take me back" />
             </form>
