--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <div class="wrapper">
                                     <div class="info">
                                         <img src="./IMAGES/engine.png" alt="">
-                                        <p>KTM 390</p>
+                                        <p id="extra">KTM DUKE 390</p>
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/turbo.png" alt="">
@@ -329,11 +329,11 @@
                                 <div class="wrapper">
                                     <div class="info">
                                         <img src="./IMAGES/engine.png" alt="">
-                                        <p>KTM 390</p>
+                                        <p id="extra">KTM DUKE 390</p>
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/suspension.svg" alt="">
-                                        <p>All independent Push-rod suspension</p>
+                                        <p id="extra">All independent Push-rod suspension</p>
                                     </div>
                                     <div class="info">
                                         <img  src="./IMAGES/tyre.svg" alt="">
@@ -341,7 +341,7 @@
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/brake.svg" alt="">
-                                        <p>All round Disc Brakes</p>
+                                        <p id="extra">All round Disc Brakes</p>
                                     </div>
                                     <!-- <button>VIEW PAST</button> -->
                                 </div>
@@ -476,7 +476,8 @@
                 <p>STUDENT CAREERS</p>
             </div>   
             <div class="careers-content">
-                <p class="intro">Velocita Racing provides a wide range of expericene and opportunity to express your skills and talent. We cover both technical and non technical aspects of Learning. Stay tuned for our recruitment drive.<br>We got something for everyone, happy racing!</p>    
+                <p class="intro">Velocita Racing provides a wide range of expericene and opportunity to express your skills and talent. We cover both technical and non technical aspects of Learning. Stay tuned for our recruitment drive.<br>We got something for everyone, happy racing!<br><br></p>    
+                <button class="career-button">Apply Now</button>
                 <div class="dept-box">
                     <div class="dept-card">
                         <div class="card-side1">
