--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Velocita Racing</title>
     
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
@@ -299,7 +299,7 @@
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/turbo.png" alt="">
-                                        <p>Garrett</p>
+                                        <p>Garrett Turbocharger</p>
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/tyre.svg" alt="">
