--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/turbo.png" alt="">
-                                        <p>Garrett Turbocharger</p>
+                                        <p id="extra">Garrett Turbocharger</p>
                                     </div>
                                     <div class="info">
                                         <img src="./IMAGES/tyre.svg" alt="">
