--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
     <link rel="stylesheet" href="CSS/body.css">
     <link rel="stylesheet" href="CSS/navbar.css">
     <link rel="stylesheet" href="CSS/home.css">
@@ -34,6 +35,7 @@
     <link rel="stylesheet" href="CSS/team-update.css">
     <link rel="stylesheet" href="CSS/career-update.css">
     <link rel="stylesheet" href="CSS/joinus.css">
+    <link rel="stylesheet" href="CSS/back-images.css">
 </head>
 <body>
 
@@ -575,6 +577,22 @@
 
 
 
+        <!-- <div class="back-image-one">
+            <div class="back-side-one">
+                <img src="" alt="">
+            </div>
+            <div class="back-side-two">
+                <div class="progressbar" data-animate="false">
+                    <div class="circle" data-percent="90">
+                        <div></div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+
+
         <section id="careers">
             
             <div class="career-heading-box">
@@ -977,5 +995,6 @@
     <script src="JS/navactive.js"></script>
     <script src="JS/careertoggle.js"></script>
     <script src="JS/ripple.js"></script>
+    <script src="JS/circle-loader.js"></script>
 </body>
 </html>
