--- a/index.html
+++ b/index.html
@@ -975,10 +975,28 @@
     
     <div class="modal-bg modal-bg-one">
         <div class="modal modal-one">
-            <h3>We haven't started recruiting yet, we'll start soon!</h3>
+            <h3>Velocita Racing Recruitment 2020</h3>
             <span class="modal-close modal-close-one">x</span>
+            <div class="apply-now">
+                <p>1. The process consists of 2 steps<br><br>&nbsp;&nbsp;&nbsp;Step 1&nbsp;:&nbsp; Tech/ Non-tech written round<br><br>&nbsp;&nbsp;&nbsp;Step 2&nbsp;:&nbsp; Interview round<br><br>2. Fill details carefully<br><br>3. You will be notified via e-mail</p>
+            </div>
+            <button class="proceed-btn ripple-btn modal-close-btn">Proceed</button>
         </div>
     </div>
+
+    <div class="modal-bg modal-bg-form">
+        <div class="modal modal-form">
+            <h3>Velocita Racing Recruitment 2020</h3>
+            <span class="modal-close modal-close-form">x</span>
+            <div class="apply-now">
+                <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="mobile" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="200" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            </div>
+            <button class="proceed-btn ripple-btn form-close-btn">Exit</button>
+        </div>
+    </div>
+
+    
 
     <div class="modal-bg modal-bg-two">
         <div class="modal modal-two">
