--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Sports Team">
+    <meta name="keywords" content="Velocita, Racing, Ramaiah">
+    <meta name="author" content="Velocita Racing">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Velocita Racing</title>
     
