--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
             <span class="modal-close modal-close-form">x</span>
             <div class="apply-now">
                 <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                <iframe class="mobile" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="95%" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="mobile google-form" src="https://docs.google.com/forms/d/e/1FAIpQLScy6YUAURnKYK9PlIx9D6DkKW2k63L4cqybHDe_o3YB5FlM-g/viewform?embedded=true" width="95%" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <button class="proceed-btn ripple-btn form-close-btn">Exit</button>
         </div>
@@ -1012,7 +1012,7 @@
             <span class="modal-close modal-close-form modal-close-two">x</span>
             <div class="apply-now">
                 <iframe class="laptop" src="https://docs.google.com/forms/d/e/1FAIpQLSdEgeYBPAzmKPxw0MKOAZYzQ3ZKVK0O3QfJKVDIAFZuZn9KqA/viewform?embedded=true" width="640" height="250" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                <iframe class="mobile" src="https://docs.google.com/forms/d/e/1FAIpQLSdEgeYBPAzmKPxw0MKOAZYzQ3ZKVK0O3QfJKVDIAFZuZn9KqA/viewform?embedded=true" width="95%" height="80%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe class="mobile google-form" src="https://docs.google.com/forms/d/e/1FAIpQLSdEgeYBPAzmKPxw0MKOAZYzQ3ZKVK0O3QfJKVDIAFZuZn9KqA/viewform?embedded=true" width="" height="" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
             <button class="proceed-btn ripple-btn sponsor-form-close-btn">Exit</button>
         </div>
