--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                 <div class="cent">
                     <img src="./IMAGES/SHOP/Coming soon_2.png" alt="coming-soon">
                 </div>
-                <div class="neon">
+                <!-- <div class="neon">
                     <a id="btn" target="_blank" href="https://velocitaracing.wixsite.com/shop">
                         <span></span>
                         <span></span>
@@ -929,7 +929,7 @@
                         <span></span>
                         SHOP NOW
                     </a>
-                </div>
+                </div> -->
                 <div class="bot">
                     <img class="bot-1" src="./IMAGES/SHOP/Line PC.svg" alt="border">
                     <img class="bot-2" src="./IMAGES/SHOP/Stay tuned (1).png" alt="staytuned">
