--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li><a href="#careers">CAREERS</a></li>
             <li><a href="#sponsors">SPONSORS</a></li>
             <li><a href="#shop">SHOP</a></li>
-            <li><a href="./blog.html">BLOG</a></li>
+            <li><a href="./blog/">BLOG</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
         <div class="burger">
