--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="VPMtUxObJwMZ7-1zTe02kr4DbcdJKVzxqxDzZlK2M2E" />
-    <meta name="google-site-verification" content="jSxRZhkAjau6jO_zccxioL7sHsvOkoh_ZUU8KXp6cn0" />
+    <!-- <meta name="google-site-verification" content="jSxRZhkAjau6jO_zccxioL7sHsvOkoh_ZUU8KXp6cn0" /> -->
     <meta property="fb:pages" content="1579413715688758" />
     <meta name="description" content=" Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. 
     This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working 
