--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
                         <form  target="_blank" action="https://velocitaracing.wixsite.com/shop">
                             <input class="mob-button shop-now proceed-btn ripple-btn" type="submit" value="Shop Now" />
                         </form>
-                        <button class="mob-button shop-now proceed-btn modal-btn-six ripple-btn">FAQs</button>
+                        <button class="mob-button shop-now proceed-btn modal-btn-six ripple-btn">Ask Something</button>
                         </div>
                     </div>
                    
