--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         "logo": "https://drive.google.com/file/d/1W9zUhFp30OXoPjfwMul_QUxJ4dJSjWCN/view?usp=sharing",
         "foundingDate": "2015",
     	 "founders": [
- {
- "@type": "Person",
- "name": "Steven Brills"
- },
- {
- "@type": "Person",
- "name": ""
- } ],
+            {
+            "@type": "Person",
+            "name": "Steven Brills"
+            },
+            {
+            "@type": "Person",
+            "name": "Deep"
+            } ],
         "image": "https://drive.google.com/file/d/1hJDhjSmvFg54b3mur1D_KbUIkBZXu6v2/view?usp=sharing",
-        "description": "'Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working on the development of racing grade vehicles for various competitions across India. The racing platforms such as Formula Bharat has given our students a chance to explore various engineering practices which play a vital role in the development of our country. Our finish line is more than just a place on the track; our mission is and has always been to innovate, to broaden the frontiers of young professionals through their creativity, ingenuity, and dexterity.'",
+        "description": "Velocita Racing is the exclusive combustion class formula student team of Ramaiah Institute of Technology, Bengaluru, Karnataka. This team comprises of 35 passionate and enthusiastic undergraduate students from various departments, who are continuously working on the development of racing grade vehicles for various competitions across India. The racing platforms such as Formula Bharat has given our students a chance to explore various engineering practices which play a vital role in the development of our country. Our finish line is more than just a place on the track; our mission is and has always been to innovate, to broaden the frontiers of young professionals through their creativity, ingenuity, and dexterity.",
         "address": {
            "@type": "PostalAddress",
            "streetAddress": " M S Ramaiah Nagar, Mathikere",
@@ -41,14 +41,12 @@
            "postalCode": "560054",
            "addressCountry": "India"
         },
-        "hasMap": "https://g.page/velocita-racing",
-         "openingHours": "Mo 09:00-04:00 Tu 09:00-04:00 We 09:00-04:00 Th 09:00-04:00 Fr 09:00-04:00 Sa 09:00-02:00",
+        
         "sameAs": ["https://facebook.com/velocitaracing",
                    "https://instagram.com/officialvelocitaracing",
                    "https://twitter.com/name",
                    "https://www.linkedin.com/company/velocita-racing-msrit",
-                   "https://twitter.com/vrvelocita"],
-
+                   "https://twitter.com/vrvelocita"]
         }</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Velocita Racing</title>
