--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
 
                         <div class="mySlides-shop fade">
                             <!-- <div class="numbertext">1 / 3</div> -->
-                            <img src="IMAGES/SHOP/Coming Soon.svg" alt="Racecraft sticker">
+                            <img src="IMAGES/SHOP/Coming soon.png" alt="Racecraft sticker">
                             <div class="text"></div>
                         </div>
                         
