--- a/shop/index.html
+++ b/shop/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Vanilla Bootstrap v4.2.1 Theme</title>
+        <title>Velocita Racing Shop</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/hero-slider.css">
         <link rel="stylesheet" href="css/templatemo-main.css">
         <link rel="stylesheet" href="css/owl-carousel.css">
+        <link rel="stylesheet" href="css/modal.css">
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
@@ -37,8 +38,8 @@ https://templatemo.com/tm-526-vanilla
     <div class="parallax-content baner-content" id="home">
         <div class="container">
             <div class="first-content">
-                <h1>Vanilla</h1>
-                <span><em>Bootstrap</em> v4.2.1 Theme</span>
+                <h1>Velocita Racing Store</h1>
+                <span><em></em> </span>
                 <div class="primary-button">
                     <a href="#services">Discover More</a>
                 </div>
@@ -52,18 +53,19 @@ https://templatemo.com/tm-526-vanilla
             <div class="row">
                 <div class="col-md-4">
                     <div class="left-text">
-                        <h4>More About Vanilla</h4>
+                        <h4>More About Velocita</h4>
                         <div class="line-dec"></div>
-                        <p>Vanilla is free HTML CSS template with Bootstrap v4.2.1 and you can apply this theme for your sites. 
-                        Please share our <a rel="nofollow" href="https://templatemo.com">website</a> to your friends or collegues. Thank you.</p>
-                        <ul>
-                            <li>-  Praesent porta urna id eros</li>
-                            <li>-  Curabitur consectetur malesuada</li>
-                            <li>-  Nam pretium imperdiet enim</li>
-                            <li>-  Sed viverra arcu non nisi efficitur</li>
-                        </ul>
+                        <p>Velocita Racing came to life around a small table at the MSRIT canteen, where a group of students from the first year found themselves in the midst of fellow automobile enthusiasts. Since then, we’ve come a long way.
+                            Having designed and fabricated a race kart while we were still freshers, we came among the top teams in the country.
+                             <a></a> </p>
+                        <!-- <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul> -->
                         <div class="primary-button">
-                            <a href="#portfolio">Learn More About Us</a>
+                            <a href="#portfolio">View Products</a>
                         </div>
                     </div>
                 </div>
@@ -73,28 +75,28 @@ https://templatemo.com/tm-526-vanilla
                             <div class="service-item">
                                 <h4>Classic Modern Design</h4>
                                 <div class="line-dec"></div>
-                                <p>Sed lacinia ligula est, at venenatis ex iaculis quis. Morbi sollicitudin nulla eget odio pellentesque.</p>
+                                <p>We've got exactly what your looking for, designed by Velocita's Creative team!</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
                                 <h4>Unique &amp; Creative Ideas</h4>
                                 <div class="line-dec"></div>
-                                <p>Sed lacinia ligula est, at venenatis ex iaculis quis. Morbi sollicitudin nulla eget odio pellentesque.</p>
+                                <p>The creators at velocita are always looking for something new.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
                                 <h4>Effective Team Work</h4>
                                 <div class="line-dec"></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia ligula est, at venenatis ex iaculis quis.</p>
+                                <p>They're working everyday to make magic happen.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
                                 <h4>Fast Support 24/7</h4>
                                 <div class="line-dec"></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lacinia ligula est, at venenatis ex iaculis quis.</p>
+                                <p>We've got your back! Just leave us a message.</p>
                             </div>
                         </div>
                     </div>
@@ -111,10 +113,15 @@ https://templatemo.com/tm-526-vanilla
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
+                                <a href="img/1st-big-item.jpg" class="modal-btn-product" data-lightbox="image-1"><img src="../IMAGES/SHOP/RACECRAFT.jpg" alt=""></a>
                                 <div class="text-content">
-                                    <h4>Awesome Note Book</h4>
-                                    <span>$18.00</span>
+                                    <h4>Racecraft Bumper Sticker</h4>
+                                    <div class="product">
+                                        <span>$18.00</span>
+                                        <div class="primary-button-buy">
+                                            <a href="javascript:void(0);">BUY NOW</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -296,11 +303,27 @@ https://templatemo.com/tm-526-vanilla
     </footer>
 
 
+    <div class="modal-bg modal-bg-product">
+        <div class="modal modal-product">
+            <!-- <h3>We are trying to fix this as soon as possible.</h3> -->
+            <img src="../IMAGES/SHOP/RACECRAFT.jpg" alt="">
+            <p>Racecraft sticker is designed to promote racing and to stand against discrimination and inequality. 
+                The idea behind this initiative is to bring awareness on modern day problems and to support each other 
+                in this car community.</p>
+            <span class="modal-close modal-close-product">x</span>
+            <button style="outline: none;" class="ripple-btn exit-button product-close-button">Exit</button>
+        </div>
+    </div>
+
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/plugins.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="../JS/ripple.js"></script>
     <script src="js/main.js"></script>
     <script>
         function openCity(cityName) {
