--- a/shop/index.html
+++ b/shop/index.html
@@ -371,7 +371,9 @@
                         <div class="row" style="display: flex; align-items: center; justify-content: center;">
                             <form id="contact" action="" method="post">
                                 <div class="row">
+                                    <div class="col-md-12">
                                     <img src="../IMAGES/Instagram Post – 1.png" height="395px" alt="">
+                                    </div>
                                     <!-- <div class="col-md-12">
                                       <fieldset>
                                         <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required="">
